Try using Graal as C2 compiler